--- a/animate-menu/index.html
+++ b/animate-menu/index.html
@@ -10,11 +10,11 @@
 	<header>
 		<a href="" class="logo">LOGO</a>
 	</header>
-	<nav id="main_menu">
+	<nav id="main_menu" class="">
 		<a id="open_menu" href="#open">
-			<span class="balkje_boven"></span>
-			<span class="balkje_midden"></span>
-			<span class="balkje_onder"></span>
+			<span class="balk1"></span>
+			<span class="balk2"></span>
+			<span class="balk3"></span>
 		</a>
 		<ul>
 			<li><a href="">item 1</a></li>
@@ -28,9 +28,7 @@
 		<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu odio nec libero ultricies consequat. Sed diam leo, mattis id viverra eget, sodales in enim. Ut eu erat eu purus fermentum finibus. Donec ut efficitur mi. Nullam imperdiet imperdiet lorem eget fringilla. Maecenas odio purus, molestie quis ante a, iaculis aliquet purus. Phasellus faucibus odio consectetur, consectetur mauris vitae, hendrerit purus. Sed porttitor, arcu sed dapibus varius, lacus quam tempor ante, quis pulvinar dui est quis odio. Sed euismod varius dolor a dictum. Donec tincidunt iaculis arcu vel venenatis. Integer mauris tellus, dignissim ut orci eu, tempus blandit mauris. Cras scelerisque mi ut nibh sollicitudin, quis sagittis risus tincidunt. Quisque vitae dolor sem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi tincidunt nec lectus ut hendrerit.
 		</p>
-		<p>
-		Maecenas auctor, est a posuere iaculis, magna sapien dignissim metus, eget bibendum justo justo eu nulla. Mauris non massa enim. Maecenas quis facilisis diam. Aliquam et urna vitae justo tempus aliquet. Suspendisse id magna fermentum purus sodales pharetra. Integer at massa non erat porta imperdiet quis at ligula. Nulla sit amet mauris vel eros fermentum hendrerit eu ac ex. Vestibulum est orci, lacinia rutrum risus at, fringilla lacinia lorem. Cras mattis in dui ac imperdiet. Fusce nunc diam, mollis sed urna pretium, ullamcorper maximus dolor. Vivamus ut nunc dignissim, efficitur magna sit amet, sagittis purus. Pellentesque sed nibh mollis, egestas magna eu, tincidunt mi. Aenean placerat sollicitudin metus vitae scelerisque. Praesent sit amet faucibus libero. Aenean laoreet massa leo, et accumsan sapien ornare ut.
-		</p>
+	
 	</section>
 	<script src="js/main.js"></script>
 </body>
